# rag-chatbot-banks

./: .env.example  .gitignore  .pre-commit-config.yaml  .prefectignore  .python-version  Dockerfile  LICENSE  Makefile  README.md  deletelist.txt  metadata.yaml  my_flow.py  pyproject.toml  serverless.yml  setup.py
.github/: pull_request_template.md
.github/workflows/: README.md  main.yaml  (+6 more)
benv/: pyvenv.cfg
blocks/: aws.py  ecs.py  ecs_task.py  s3.py
data/: README.md
dataflowops/: README.md  snowflake_utils.py
docker/: Dockerfile_app
etl/: Dockerfile  etl.py
flows/: data_extract.py  data_extraction.py  data_local_sync.py  healthcheck.py  hello.py  j_deployment.py  maintenance.py  my_gh_workflow.py  parametrized.py  utils.py
infrastructure/: README.md  ecr_repository.yml  ecs_cluster_prefect_agent.yml
ml/: Dockerfile  ml.py
notebooks/: CapstoneProject_Week2.ipynb  CapstoneProject_Week3.ipynb  CapstoneProject_Week4.ipynb  Extracting the data (CIBC) using URLAP.ipynb  dynamic pdf download1.2-Copy1AP.ipynb  metadata.ipynb  sources.txt
requirements/: requirements.app.txt  requirements.dev.txt  requirements.prefect.txt  requirements.txt
s3_reactive_flow/: Dockerfile  s3_reactive_flow.py
src/: config.py
terraform/: ecs_cluster.tf  ecs_task_definition.tf  main.tf  network.tf  outputs.tf  s3.tf  variables.tf  worker.tf
tfs/: ecs.tf  main.tf  outputs.tf  s3.tf  variables.tf  worker.tf
utilities/: example_deploy_script.py  list_flow_runs.py  remove_all_deployments.py  remove_all_flows.py  workspace.py
utils/: list_flow_runs.py  maintenance.py
(+22 files in other folders)
